--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,18 @@
-.App {
-  text-align: center;
+
+form {
+  margin-top: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+label {
+  margin-top: 10px;
+}
+
+h6 {
+  margin-top: 10px !important;
+}
+
+.form-group{
+  margin-top: 10px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -13,16 +21,6 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .App-link {
   color: #61dafb;
